# backend-docker-postgres-fastapi

./: Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
src/backend/: main.py
